--- a/app/src/main/res/layout/content_newcombo.xml
+++ b/app/src/main/res/layout/content_newcombo.xml
@@ -514,7 +514,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Save Combo" />
+                        android:text="Save Combo"
+                        android:onClick="SaveCombo"/>
 
                     <Button                        android:id="@+id/buttonReset"
                         android:layout_width="0dp"
@@ -522,6 +523,13 @@
                         android:layout_weight="1"
                         android:text="Reset"
                         android:onClick="resetWindow"/>
+
+                    <Button                        android:id="@+id/buttonHome"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="To Home"
+                        android:onClick="ToHome"/>
 
 
                 </LinearLayout>
